--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,14 +5,15 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+
 
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
@@ -22,4 +23,158 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.search-js {
+  text-align: center;
+
+
+}
+
+.form-control {
+  box-sizing: border-box;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+  font-family: 'Montserrat', sans-serif;
+  padding-left: 16px;
+  border-style: none;
+  border: 1px solid #808080;
+  border-radius: 4px;
+
+}
+
+.form-control:hover {
+  border: 1px solid #000;
+}
+
+.form-control:active {
+  border: 1px solid #4e75ff;
+
+}
+
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+
+  height: 40px;
+
+  background: #4e75ff;
+  border-style: none;
+
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+div{
+  text-align: center;
+}
+button:hover {
+  background: #6c8cff;
+}
+
+.gallery {
+  list-style-type: none;
+  width: 1440px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 24px;
+  background: #fff;
+  padding: 32px 156px;
+}
+
+img {
+  width: 360px;
+  height: 200px;
+}
+
+.gallery-item {
+  border: 1px solid #808080;
+}
+
+.desc {
+  display: flex;
+  gap: 28px;
+  justify-content: center;
+  align-content: center;
+
+
+}
+
+.desc-item {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  justify-content: center;
+  text-align: center;
+
+
+}
+
+.desc-item-style {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 133%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  font-synthesis: weight;
+
+
+}
+
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.loader::after,
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #FF3D00;
+  width: 16px;
+  height: 16px;
+  transform: translate(-50%, 50%);
+  border-radius: 50%;
+}
+
+.loader::before {
+  left: auto;
+  right: 0;
+  background: #FFF;
+  transform: translate(50%, 100%);
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.hidden-btn {
+  display: none;
+}
+.hidden {
+  display: none;
 }
