--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,180 +1,229 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./header.css');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-.search-js {
-  text-align: center;
-
-
-}
-
-.form-control {
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  border-radius: 4px;
-  width: 272px;
-  height: 40px;
-  font-family: 'Montserrat', sans-serif;
-  padding-left: 16px;
-  border-style: none;
-  border: 1px solid #808080;
-  border-radius: 4px;
-
-}
-
-.form-control:hover {
-  border: 1px solid #000;
-}
-
-.form-control:active {
-  border: 1px solid #4e75ff;
-
 }
 
 button {
-  border-radius: 8px;
-  padding: 8px 16px;
-
-  height: 40px;
-
-  background: #4e75ff;
-  border-style: none;
-
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.04em;
-  color: #fff;
-}
-div{
-  text-align: center;
-}
-button:hover {
-  background: #6c8cff;
-}
-
-.gallery {
-  list-style-type: none;
-  width: 1440px;
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 24px;
-  background: #fff;
-  padding: 32px 156px;
+  display: block;
+  cursor: pointer;
 }
 
 img {
+  display: block;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  display: block;
+  text-decoration: none;
+}
+
+.visually-hidden {
+  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+}
+
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
+  width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom: 36px;
+  padding-top: 36px;
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
+.entry-form {
+  display: flex;
+  gap: 8px;
+}
+
+.entry-form-input {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  outline: none;
+  font-size: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  transition: border-color 200ms ease-in-out;
+}
+
+.entry-form-input:hover,
+.entry-form-input:focus {
+  border-color: #000000;
+}
+
+.entry-form-btn {
+  border: none;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  height: 40px;
+  width: 91px;
+  color: #ffffff;
+  transition: background-color 200ms ease-in-out;
+}
+
+.entry-form-btn:hover,
+.entry-form-btn:focus {
+  background-color: #6c8cff;
+}
+
+.entry-form-input::placeholder {
+  font-family: inherit;
+  font-size: 16px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 24px;
+}
+
+.card {
+  border: 1px solid #808080;
   width: 360px;
   height: 200px;
 }
 
-.gallery-item {
-  border: 1px solid #808080;
-}
-
-.desc {
+.card-content {
+  padding: 8px 20px;
   display: flex;
-  gap: 28px;
-  justify-content: center;
-  align-content: center;
-
-
+  justify-content: space-between;
 }
 
-.desc-item {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 200%;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
+.card-content-item {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  text-align: center;
-
-
-}
-
-.desc-item-style {
-  font-family: 'Montserrat', sans-serif;
+  align-items: center;
   font-weight: 600;
   font-size: 12px;
   line-height: 133%;
-  letter-spacing: 0.04em;
   color: #2e2f42;
-  font-synthesis: weight;
-
-
 }
 
+.card-content-item span {
+  font-weight: 400;
+  line-height: 200%;
+}
 
+.card-image-wrapper {
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+}
+
+.card-image {
+  width: 100%;
+}
+
+.next-page {
+  border: none;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 125px;
+  height: 40px;
+  color: #ffffff;
+  transition: background-color 200ms ease-in-out;
+}
+
+.next-page:hover,
+.next-page:focus {
+  background-color: #6c8cff;
+}
+
+/*================================================================*/
+/* loader */
+/*================================================================*/
 .loader {
-  width: 48px;
-  height: 48px;
+  color: #2e2f42;
+  font-size: 45px;
+  text-indent: -9999em;
+  overflow: hidden;
+  width: 1em;
+  height: 1em;
   border-radius: 50%;
-  display: block;
-  margin: 15px auto;
   position: relative;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
+  transform: translateZ(0);
+  animation: mltShdSpin 1.7s infinite ease, round 1.7s infinite ease;
 }
 
-.loader::after,
-.loader::before {
-  content: '';
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background: #FF3D00;
-  width: 16px;
-  height: 16px;
-  transform: translate(-50%, 50%);
-  border-radius: 50%;
+@keyframes mltShdSpin {
+  0% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em,
+      0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+  5%,
+  95% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em,
+      0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+  10%,
+  59% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.087em -0.825em 0 -0.42em,
+      -0.173em -0.812em 0 -0.44em, -0.256em -0.789em 0 -0.46em,
+      -0.297em -0.775em 0 -0.477em;
+  }
+  20% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em,
+      -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em,
+      -0.749em -0.34em 0 -0.477em;
+  }
+  38% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em,
+      -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em,
+      -0.82em -0.09em 0 -0.477em;
+  }
+  100% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em,
+      0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
 }
 
-.loader::before {
-  left: auto;
-  right: 0;
-  background: #FFF;
-  transform: translate(50%, 100%);
-}
-
-@keyframes rotation {
+@keyframes round {
   0% {
     transform: rotate(0deg);
   }
-
   100% {
     transform: rotate(360deg);
   }
 }
-.hidden-btn {
-  display: none;
-}
-.hidden {
-  display: none;
-}
+/*================================================================*/
